--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     manovssrinivasan
 </marquee>
 <button type="button" id="monsters" class="btn btn-danger" style="height: 25px;background-color: rgb(8, 103, 158);">player</button>
+<button type="button" id="monsters" class="btn btn-danger" style="height: 25px;background-color: red;">Enemy</button>
 
 </body>
 </html>
